Bug 118801 - UI: Left and Right arrows are missing in Input field dialog
Summary: UI: Left and Right arrows are missing in Input field dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-07-17 14:53 UTC by Xisco Faulí
Modified: 2018-07-18 16:03 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-07-17 14:53:15 UTC
Steps to reproduce:
1. Open attachment 143536 [details] from bug 118742 -> Input field dialog will be displayed

-> Left and Right icons next to Help button are missing.

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: f543b6a0ac6cf30922c1a1ae9bfce1d605f1d4f1
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 1 Xisco Faulí 2018-07-17 14:54:28 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=a418c365644a4bfb0e40621d1b36b1708978a500

author	Caolán McNamara <caolanm@redhat.com>	2018-04-17 13:08:14 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-04-17 16:51:50 +0200
commit a418c365644a4bfb0e40621d1b36b1708978a500 (patch)
tree bed522b639b3dce8e2ae4cb5a1aad3ca1409f6c3
parent 8b843c5aac1ed8c5922b5ef4d36daa13538dd02f (diff)
let's just run ResHookProc over everything

Bisected with: linux-6.1

Adding Cc: to Caolán McNamara
Comment 2 Commit Notification 2018-07-17 20:12:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=74318dbeffb9536ac3b4215ae9369a05f2ac7228

Resolves: tdf#118801 icons go missing on text-less buttons

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2018-07-17 20:12:42 UTC
backport to 6-1 in gerrit
Comment 4 Xisco Faulí 2018-07-18 16:00:58 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 95b00f1bfa341003af23e150d316d943d47909cf
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Caolán, Thanks for fixing this!!
Comment 5 Commit Notification 2018-07-18 16:03:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9bde4146ad0ebe6d3298f7d359154459cbf62f89&h=libreoffice-6-1

Resolves: tdf#118801 icons go missing on text-less buttons

It will be available in 6.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.