Resolves: tdf#118801 icons go missing on text-less buttons

Change-Id: I003a59643518e60948d71b335dfcd7e20ba8fee5